--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,20 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
+fabric.loom.multiProjectOptimisation=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20.4
-yarn_mappings=1.20.4+build.1
-loader_version=0.15.0
+minecraft_version=24w07a
+yarn_mappings=24w07a+build.1
+loader_version=0.15.7
 
 # Mod Properties
-mod_version=1.0.0
-maven_group=com.example
-archives_base_name=modid
+calio_version=2.0.0-beta.1+prototype
+apoli_version=3.0.0-beta.1+prototype
+origins_version=3.0.0-beta.1+prototype
+
+maven_group=com.github.apace100
 
 # Dependencies
-fabric_version=0.91.1+1.20.4
+fabric_version=0.96.4+1.20.5
